samples/_failures_safe/1761390943_27f613_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de22ebb1.c: In function ‘main’:
./samples/SAFE/__tmp_de22ebb1.c:163:25: error: missing terminating " character
  163 |         fprintf(stderr, "Error
      |                         ^~~~~~
./samples/SAFE/__tmp_de22ebb1.c:163:9: error: expected expression at end of input
  163 |         fprintf(stderr, "Error
      |         ^~~~~~~
./samples/SAFE/__tmp_de22ebb1.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_de22ebb1.c:163:9: error: expected declaration or statement at end of input
